# Change Log
This project adheres to [Semantic Versioning](http://semver.org/).

## [Unreleased]
### Added
- abm.aco

### Changed

## EvoPER [0.3.0] - 2016-07-10
### Added

### Changed

### Fixed

## EvoPER [0.2.0] - 2016-06-22
### Added
- extremize the entry point for optimization functions
- Options Parent class for options
- OptionsPSO class for PSO Options
- OptionsSAA class for SAA Options
- OptionsSDA class for SDA Options
- abm.sda Simulted dilution
- saa.neighborhood Neighborhood for SAA
- saa.neighborhood1 Neighborhood for SAA
- saa.neighborhoodH Neighborhood for SAA
- saa.neighborhoodN Neighborhood for SAA
- saa.tbyk Temperature for SAA
- saa.texp Temperature for SAA
- saa.bolt Temperature for SAA
- saa.tcte Temperature for SAA
- f0.test Plain Test function
- f0.rosenbrock2 Plain Rosenbrock 2 parms test function


### Changed
- abm.pso Change in parameters
- abm.saa Change in parameters
- abm.sda Change in parameters
- renamed saa.neighborhood.t1 now is - saa.neighborhood1

### Fixed
- Bug in abm.pso function


## EvoPER [0.1.0] (first realease) - 2016-06-15
### Added
- ObjectiveFunction S4 Parent class for the objective function
- PlainFunction S4 Child class of ObjectiveFunction for estimating parameters of plain math functions
- RepastFunction S4 Child class of ObjectiveFunction for estimating parameters of Repast models
- assert Checks if some required precondition holds and stop execution if not
- pso.Velocity Calculate the particle velocity
- pso.neighborhood.K2 Two neighbors
- pso.neighborhood.K4 Non Neumann Neighborhood for Particle Searm
- pso.neighborhood.KN Fully connected graph neighborhood
- pso.lbest Seach for the best neighbor
- pso.best Search for the best particle
- pso.chi Calculates the constriction coefficient
- cbuf A Simple circular buffer implementation
- lowerBound Check lower bound
- upperBound Check upper bound
- enforceBounds Check the lower and upper bounds
- saa.neighborhood.t1 Neighborhood function for Simulated Annealing