@@ -2,7 +2,7 @@ Package: evoper
 Type: Package
 Title: Evolutionary Parameter Estimation for 'Repast Simphony' Models
 Version: 0.3.0
-Date: 2016-07-10
+Date: 2016-11-06
 Authors@R: c(
     person("Antonio", "Prestes Garcia", email = "antonio.pgarcia@alumnos.upm.es", role = c("aut","cre")),
     person("Alfonso", " Rodriguez-Paton", email = "arpaton@fi.upm.es", role = c("aut","ths")))
@@ -19,5 +19,5 @@ LazyData: TRUE
 Depends:
     rrepast
 Imports:
-    methods
+    methods,  futile.logger, boot, reshape, ggplot2, deSolve
 RoxygenNote: 5.0.1
