@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 export(Estimates)
+export(Magnitude)
 export(ObjectiveFunction)
 export(Options)
 export(OptionsACOR)
@@ -38,6 +39,7 @@ export(f0.test)
 export(f1.rosenbrock2)
 export(f1.test)
 export(gm.mean)
+export(gm.sd)
 export(initSolution)
 export(lowerBound)
 export(naiveperiod)
@@ -60,8 +62,10 @@ export(saa.tcte)
 export(saa.texp)
 export(sda.dilute)
 export(sda.mixing)
+export(sda.shaking1)
+export(sda.shaking2)
+export(sda.solute)
 export(sda.solution)
-export(sda.stock)
 export(slope)
 export(slopes)
 export(upperBound)
@@ -74,7 +78,8 @@ exportClasses(OptionsSAA)
 exportClasses(OptionsSDA)
 exportClasses(PlainFunction)
 exportClasses(RepastFunction)
-importFrom(deSolve,ode)
+importFrom(boot,boot)
+importFrom(boot,boot.ci)
 importFrom(futile.logger,flog.debug)
 importFrom(futile.logger,flog.error)
 importFrom(futile.logger,flog.info)
